<resources>
    <string name="app_name">ApachePoi</string>
    <string name="export_xls">Export xls</string>
    <string name="export_docx">Export docx</string>
    <string name="insert_data">Insert Data</string>
    <string name="date">DATE:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="amount">Amount:</string>
    <string name="settings">Settings</string>
    <string name="total">Total</string>
    <string name="noteslc">Notes:</string>
    <string name="sales">Sales</string>
    <string name="expenditure">Expenditure</string>
    <string name="trans_id">Trans. ID:</string>
    <string name="Export">export</string>
    <string name="delete">Delete</string>
    <string name="make_transaction">Make transaction</string>
    <string name="export_sales_history_to_xls_file">Export sales history to excel file</string>
    <string name="review_sales_history">Review Sales History</string>
    <string name="register_new_expense_record">Register New Expense Record</string>
    <string name="main_menu1">Main Menu</string>
    <string name="data_registry">DATA REGISTRY</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="Notes">Comment</string>
    <string name="send_reciept">Send Receipt</string>
    <string name="make_payment">Make Payment</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="sales_history">Sales History</string>
    <string name="expenditure_history">Expenditure History</string>
    <string name="records">Records</string>
    <string name="record_history">Record History</string>
    <string name="activity">Activity</string>
    <string name="datelc">Date:</string>
    <string name="new_sales_transaction">New Sales Transaction</string>
    <string name="input_sql_data">Input SQL Data</string>
    <string name="export_sql_hssf">Export SQL HSSF</string>
    <string name="export_sql_docx">Export SQL docx</string>
    <string name="export_pptx">Export pptx</string>
    <string name="hssf_workbook">hssf workbook</string>
    <string name="hslfslideshow">HSLFSlideShow</string>
    <string name="xwpf_workbook">xwpf workbook</string>
    <string name="xssf_workbook">XSSF Workbook</string>
    <string name="insert">Insert</string>
    <string name="organic_fertilizers">Organic Fertilizers</string>
     <string name="aboutapache">About Apache</string>
    <string name="aboutxwpf">About XWPF</string>
     <string name="aboutxssf">About XSSF</string>
     <string name="abouthssf">About HSSF</string>
    <string name="abouthslf">About HSLF</string>


</resources>