<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mmenu"
        android:title="@string/main_menu1"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/ventas"
        android:title="@string/sales"
        app:showAsAction="never" />
    <item
        android:id="@+id/salesresum"
        android:title="@string/sales_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/gastos"
        android:title="@string/expenditure"
        app:showAsAction="never" />
    <item
        android:id="@+id/gastoshstry"
        android:title="@string/expenditure_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/records"
        android:title="@string/records"
        app:showAsAction="never" />
    <item
        android:id="@+id/ofert"
        android:title="@string/organic_fertilizers"
        app:showAsAction="never" />

</menu>