<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HssfWbk">

    <Space
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <EditText
        android:id="@+id/xlstv"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:autofillHints=""
        android:hint="@string/insert_data"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <Button
        android:id="@+id/btnexpxls"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/export_xls" />

    <Button
        android:id="@+id/exphssfsql"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/export_sql_hssf" />
</LinearLayout>