<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="346dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/trans_id"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/datelc"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/description"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/amount"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/price"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/total"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/noteslc"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="253dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/transid4"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:autofillHints=""
                android:hint="@string/trans_id"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/date4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/date"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/descrip4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/amt4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/amount"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/price4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/price"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/total4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/total"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/notes4"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:autofillHints=""
                android:hint="@string/noteslc"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="11sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnupdate5"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:text="@string/update"
        android:textColor="@color/white" />

</LinearLayout>