<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <Space
        android:layout_width="match_parent"
        android:layout_height="42dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/trans_id"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/transid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/trans_id"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/date2"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/date"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/descrip2"
            android:layout_width="248dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/amt2"
            android:layout_width="53dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/amount"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/price2"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/price"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/total2"
            android:layout_width="211dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/total"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/noteslc"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/comment2"
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/noteslc"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btsearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search"
            android:textColor="@color/white" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btinsert"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Insert"
            android:textColor="@color/white" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>